* Hide side navbar and added facebook like side menu bar. * Corrected old references. * Adding new css and js library files

--- a/ICANJDevApp/ICANJ/src/main/webapp/resources/css/icanj.css
+++ b/ICANJDevApp/ICANJ/src/main/webapp/resources/css/icanj.css
@@ -1,7 +1,7 @@
 .jumbotron {
   background: url(../img/icanjHeader.png);
   background-repeat: no-repeat;
-  
+
 }
 .header {
 	background: url(../img/icanjHeader.png);
@@ -11,4 +11,8 @@
 .mobile-header {
 	background: url(../img/icanjHeaderIPhone.png);
 	background-repeat: no-repeat;
+}
+
+.menu {
+	padding-right: 40px;
 }
